# esdashboard

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac.in
data/: Makefile.am  com.expidus.esdashboard-settings.desktop.in.in  com.expidus.esdashboard.desktop.in.in  org.xfce.esdashboard-autostart.desktop.in.in
data/data/: Makefile.am  bindings.xml  preferences.ui
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
data/metainfo/: Makefile.am  org.xfce.esdashboard.metainfo.xml.in
data/themes/: Makefile.am
data/themes/esdashboard/: Makefile.am  esdashboard-secondary.xml  esdashboard.css  esdashboard.theme.in.in  esdashboard.xml
data/themes/esdashboard-auber/: Makefile.am  animations.xml  esdashboard-auber.css  esdashboard.css  esdashboard.theme.in.in
data/themes/esdashboard-blue/: Makefile.am  esdashboard-blue.css  esdashboard.theme.in.in
data/themes/esdashboard-dark/: Makefile.am  esdashboard-dark.css  esdashboard-secondary.xml  esdashboard.theme.in.in  esdashboard.xml
data/themes/esdashboard-mint/: Makefile.am  effects.xml  esdashboard-mint.css  esdashboard.theme.in.in
data/themes/esdashboard-moranga/: Makefile.am  esdashboard-moranga.css  esdashboard.theme.in.in
data/themes/esdashboard-wine/: Makefile.am  esdashboard-wine.css  esdashboard.theme.in.in
esdashboard/: Makefile.am  main.c
libesdashboard/: Makefile.am  action-button.c  action-button.h  actor.c  actor.h  animation.c  animation.h  application-button.c  application-button.h  application-database.c  application-database.h  application-tracker.c  application-tracker.h  application.c  application.h  applications-menu-model.c  applications-menu-model.h  applications-search-provider.c  applications-search-provider.h  applications-view.c  applications-view.h  background.c  background.h  binding.c  binding.h  bindings-pool.c  bindings-pool.h  box-layout.c  box-layout.h  button.c  button.h  click-action.c  click-action.h  collapse-box.c  collapse-box.h  compat.h  css-selector.c  css-selector.h  debug.c  debug.h  (+115 more)
libesdashboard/gdk/: window-tracker-backend-gdk.c  window-tracker-backend-gdk.h
libesdashboard/x11/: window-content-x11.c  window-content-x11.h  window-tracker-backend-x11.c  window-tracker-backend-x11.h  window-tracker-monitor-x11.c  window-tracker-monitor-x11.h  window-tracker-window-x11.c  window-tracker-window-x11.h  window-tracker-workspace-x11.c  window-tracker-workspace-x11.h  window-tracker-x11.c  window-tracker-x11.h
plugins/clock-view/: Makefile.am  clock-view-settings.c  clock-view-settings.h  clock-view.c  clock-view.h  plugin.c
plugins/example-search-provider/: Makefile.am  example-search-provider.c  example-search-provider.h  plugin.c
plugins/gnome-shell-search-provider/: Makefile.am  gnome-shell-search-provider.c  gnome-shell-search-provider.h  plugin.c
plugins/hot-corner/: Makefile.am  hot-corner-settings.c  hot-corner-settings.h  hot-corner.c  hot-corner.h  plugin.c
plugins/middle-click-window-close/: Makefile.am  middle-click-window-close.c  middle-click-window-close.h  plugin.c
po/: POTFILES.in  POTFILES.skip  bg.po  ca.po  da.po  de.po  el.po  es.po  fr.po  gl.po  he.po  id.po  ie.po  it_IT.po  ja.po  kk.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  ru_RU.po  sl.po  sq.po  sr.po  sv.po  sv_SE.po  tr.po  zh_CN.po
settings/: Makefile.am  general.c  general.h  main.c  plugins.c  plugins.h  settings.c  settings.h  themes.c  themes.h
